fixed layout issues on report full view

--- a/cms/wp-content/themes/timby/sass/layout/_layout.sass
+++ b/cms/wp-content/themes/timby/sass/layout/_layout.sass
@@ -26,10 +26,12 @@ body, html
 .report
   position: absolute
   left: 570px
+  right: 0
   border-left: 1px $med-gray solid
   padding: 1.5em
   overflow-y: auto
   height: 100%
+  background: $light-gray
 
 //major container on moderation
 .l-main-unit
